exports[`Component: App should add an item 1`] = `
<div>
  <form
    className="App"
    onSubmit={[Function]}>
    <input
      onChange={[Function]}
      type="text"
      value="" />
    <button>
      Submit
    </button>
  </form>
  <ul />
</div>
`;

exports[`Component: App should add an item 2`] = `
<div>
  <form
    className="App"
    onSubmit={[Function]}>
    <input
      onChange={[Function]}
      type="text"
      value="" />
    <button>
      Submit
    </button>
  </form>
  <ul>
    <li>
      Some random text
    </li>
  </ul>
</div>
`;

exports[`Component: App should match its empty snapshot 1`] = `
<div>
  <form
    className="App"
    onSubmit={[Function]}>
    <input
      onChange={[Function]}
      type="text"
      value="" />
    <button>
      Submit
    </button>
  </form>
  <ul />
</div>
`;

exports[`Component: App should match its snapshot with items 1`] = `
<div>
  <form
    className="App"
    onSubmit={[Function]}>
    <input
      onChange={[Function]}
      type="text"
      value="" />
    <button>
      Submit
    </button>
  </form>
  <ul />
</div>
`;
